# wxwidgets_templ

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
